--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,10 @@ environment:
   flutter: ">=2.8.0"
 
 dependencies:
-  extended_text_library: ^8.0.1
+#  extended_text_library: ^8.0.1
+  extended_text_library:
+    git:
+      url: https://github.com/weixiaozhai/extended_text_library
   flutter:
     sdk: flutter
 
